--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 </head>
 <body>
   <div id="app">
+    <navbar></navbar>
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
       <div class="timeline bg-purple mt-5 d-flex">
         <div class="d-flex justify-content-center my-3">
@@ -235,6 +236,9 @@
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
+  <!-- Componentes -->
+  <script src="components/Navbar.js"></script>
+
   <script>
     const { createApp, ref, computed, onMounted } = Vue;
     
