--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Componentes -->
+  <script src="components/Button.js"></script>
   <script src="components/Navbar.js"></script>
 
   <script>
