Agora vai será?

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       /* Fundo de imagem */
-      background-image: url("kawaii.png");
+      background-image: url("./assets/kawaii.png");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
