--- a/index.html
+++ b/index.html
@@ -235,10 +235,16 @@
 
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  
+  <script>
+    // Cria um objeto para armazenar os componentes antes do Vue estar pronto
+    window.MyApp = {
+      components: {}
+    };
+  </script>
   <!-- Componentes -->
   <script src="components/Button.js"></script>
   <script src="components/Navbar.js"></script>
+  <script src="app.js"></script>
 
   <script>
     const { createApp, ref, computed, onMounted } = Vue;
