--- a/index.html
+++ b/index.html
@@ -191,7 +191,11 @@
 </head>
 <body>
   <div id="app">
-    <navbar></navbar>
+    <nav class="navbar">
+      <div class="menu mt-3">
+        <router-link to="/home" class="big-button">Home <img class="emojiMenu" :src="homeImage" alt="Imagem" /> </router-link>
+      </div>
+    </nav>
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
       <div class="timeline bg-purple mt-5 d-flex">
         <div class="d-flex justify-content-center my-3">
@@ -235,16 +239,6 @@
 
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // Cria um objeto para armazenar os componentes antes do Vue estar pronto
-    window.MyApp = {
-      components: {}
-    };
-  </script>
-  <!-- Componentes -->
-  <script src="components/Button.js"></script>
-  <script src="components/Navbar.js"></script>
-  <script src="app.js"></script>
 
   <script>
     const { createApp, ref, computed, onMounted } = Vue;
