--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <div id="app">
     <nav class="navbar">
       <div class="menu mt-3">
-        <router-link to="/home" class="big-button">Home <img class="emojiMenu" :src="homeImage" alt="Imagem" /> </router-link>
+        <a href="/home" class="big-button">Home <img class="emojiMenu" src="/assets/house.png" alt="Imagem" /> </a>
       </div>
     </nav>
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
