--- a/index.html
+++ b/index.html
@@ -189,12 +189,13 @@
     }
   </style>
   <link rel="stylesheet" href="button.css">
+  <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
   <div id="app">
     <nav class="navbar">
       <div class="menu mt-3">
-        <a href="/home" class="big-button">Home <img class="emojiMenu" src="/assets/house.png" alt="Imagem" /> </a>
+        <a href="https://one-together.vercel.app/home" class="big-button">Home <img class="emojiMenu" src="/assets/house.png" alt="Imagem" /> </a>
       </div>
     </nav>
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
