--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
     <nav class="navbar">
       <div class="menu mt-3">
         <a href="https://one-together.vercel.app/home" class="big-button">Home <img class="emojiMenu" src="/assets/house.png" alt="Imagem" /> </a>
+        <a href="https://one-together.vercel.app/momentos" class="big-button">Momentos <img class="emojiMenu" src="/assets/contact.png" alt="Imagem" /> </a>
+        <a href="https://one-together.vercel.app/whatsapp" class="big-button">Whatsapp <img class="emojiMenu" src="/assets/graph.png" alt="Imagem" /> </a>
+        <a href="https://one-together.vercel.app/enigma" class="big-button">Presente <img class="emojiMenu" src="/assets/friends.png" alt="Imagem" /> </a>
       </div>
     </nav>
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center">
