--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       padding: 0;
     }
 
+    #app {
+      max-width: 1280px;
+      margin: 0 auto;
+      padding: 2rem;
+      text-align: center;
+    }
+
     .timeline {
       display: flex;
       width: 1200px;
