--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
       padding: 0;
     }
 
-    #app {
-      max-width: 1280px;
-    }
-
     .timeline {
       display: flex;
       width: 1200px;
@@ -194,6 +190,7 @@
   </style>
   <link rel="stylesheet" href="button.css">
   <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div id="app">
