--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linha do Tempo</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Vue.js -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <link rel="stylesheet" href="button.css">
+  <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="main.css">
   <style>
     body {
       /* Fundo de imagem */
@@ -188,9 +192,6 @@
       border: none;
     }
   </style>
-  <link rel="stylesheet" href="button.css">
-  <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div id="app">
