--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
       <div class="timeline bg-purple mt-5 d-flex">
          <!-- Botões kawaii -->
       <div class="btn-group-kawaii my-3 d-flex gap-3">
+          <a
+            href="https://yuris2kate.github.io/oneyear-together"
+            :disabled="false"
+            class="btn-kawaii"
+          >
+            Parte 1
+        </a>
         <button
-          :disabled="true"
-          class="btn-kawaii"
-        >
-          Parte 1
-        </button>
-        <button
-          onclick="window.location.href='https://yuris2kate.github.io/oneyear-together/'"
           :disabled="true"
           class="btn-kawaii"
         >
