--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
          <!-- Botões kawaii -->
       <div class="btn-group-kawaii my-3 d-flex gap-3">
           <a
-            href="https://yuris2kate.github.io/oneyear-together"
+            href="https://one-together.vercel.app/momentos"
             :disabled="false"
             class="btn-kawaii"
           >
