--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <a
             href="https://one-together.vercel.app/momentos"
             :disabled="false"
-            class="btn-kawaii"
+            class="btn-kawaii text-decoration-none"
           >
             Parte 1
         </a>
