--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           <a href="https://one-together.vercel.app/home" class="big-button me-3">Home <img class="emojiMenu" src="./assets/house.png" alt="Imagem" /> </a>
           <a href="https://one-together.vercel.app/momentos" class="big-button me-3">Momentos <img class="emojiMenu" src="./assets/graph.png" alt="Imagem" /> </a>
           <a href="https://one-together.vercel.app/whatsapp" class="big-button me-3">Whatsapp <img class="emojiMenu" src="./assets/contact.png" alt="Imagem" /> </a>
-          <a href="https://one-together.vercel.app/enigma" class="big-button me-3">Presente <img class="emojiMenu" src="./assets/friends.png" alt="Imagem" /> </a>
+          <a href="https://one-together.vercel.app/enigma9" class="big-button me-3">Presente <img class="emojiMenu" src="./assets/friends.png" alt="Imagem" /> </a>
         </div>
       </nav>
       <div class="timeline bg-purple mt-5 d-flex">
