--- a/index.html
+++ b/index.html
@@ -270,6 +270,13 @@
         >
           Parte 2
       </button>
+        <a
+            href="https://yuris2kate.github.io/oneyear-together-three/"
+            :disabled="false"
+            class="btn-kawaii text-decoration-none"
+          >
+            Parte 1
+        </a>
         <button @click="carregarTodas" class="btn-kawaii carregar-todas-btn">
           Carregar todas!
         </button>
