--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           Parte 2
       </button>
         <a
-            href="https://yuris2kate.github.io/oneyear-together-three/"
+            href="https://yuris2kate.github.io/one-together-three/"
             :disabled="false"
             class="btn-kawaii text-decoration-none"
           >
