--- a/index.html
+++ b/index.html
@@ -368,19 +368,19 @@
       <nav class="navbar">
   <!-- Menu Desktop -->
   <div class="menu-desktop">
-    <a href="/home" class="menu-button">
+    <a href="https://one-together.vercel.app/home" class="menu-button">
       <img src="./assets/house.png" alt="Home" />
       <span>Home</span>
     </a>
-    <a href="/momentos" class="menu-button">
+    <a href="https://one-together.vercel.app/momentos" class="menu-button">
       <img src="./assets/graph.png" alt="Momentos" />
       <span>Momentos</span>
     </a>
-    <a href="/whatsapp" class="menu-button">
+    <a href="https://one-together.vercel.app/whatsapp" class="menu-button">
       <img src="./assets/contact.png" alt="Whatsapp" />
       <span>Whatsapp</span>
     </a>
-    <a href="/enigma9" class="menu-button">
+    <a href="https://one-together.vercel.app/enigma9" class="menu-button">
       <img src="./assets/friends.png" alt="Presente" />
       <span>Presente</span>
     </a>
@@ -388,16 +388,16 @@
 
   <!-- Menu Mobile -->
   <div class="menu-mobile">
-    <a href="/home" class="icon-button">
+    <a href="https://one-together.vercel.app/home" class="icon-button">
       <img src="./assets/house.png" alt="Home" />
     </a>
-    <a href="/momentos" class="icon-button">
+    <a href="https://one-together.vercel.app/momentos" class="icon-button">
       <img src="./assets/graph.png" alt="Momentos" />
     </a>
-    <a href="/whatsapp" class="icon-button">
+    <a href="https://one-together.vercel.app/whatsapp" class="icon-button">
       <img src="./assets/contact.png" alt="Whatsapp" />
     </a>
-    <a href="/enigma9" class="icon-button">
+    <a href="https://one-together.vercel.app/enigma9" class="icon-button">
       <img src="./assets/friends.png" alt="Presente" />
     </a>
   </div>
