--- a/index.html
+++ b/index.html
@@ -368,19 +368,19 @@
       <nav class="navbar">
   <!-- Menu Desktop -->
   <div class="menu-desktop">
-    <a href="https://one-together.vercel.app/home" class="menu-button">
+    <a href="https://one-together.vercel.app/home" class="big-button">
       <img src="./assets/house.png" alt="Home" />
       <span>Home</span>
     </a>
-    <a href="https://one-together.vercel.app/momentos" class="menu-button">
+    <a href="https://one-together.vercel.app/momentos" class="big-button">
       <img src="./assets/graph.png" alt="Momentos" />
       <span>Momentos</span>
     </a>
-    <a href="https://one-together.vercel.app/whatsapp" class="menu-button">
+    <a href="https://one-together.vercel.app/whatsapp" class="big-button">
       <img src="./assets/contact.png" alt="Whatsapp" />
       <span>Whatsapp</span>
     </a>
-    <a href="https://one-together.vercel.app/enigma9" class="menu-button">
+    <a href="https://one-together.vercel.app/enigma9" class="big-button">
       <img src="./assets/friends.png" alt="Presente" />
       <span>Presente</span>
     </a>
