--- a/index.html
+++ b/index.html
@@ -339,6 +339,12 @@
   height: 24px;
 }
 
+.big-button img {
+  width: 40px;
+  height: 40px;
+  margin-left: 15px;
+}
+
 .icon-button:hover {
   transform: scale(1.1);
 }
@@ -369,20 +375,20 @@
   <!-- Menu Desktop -->
   <div class="menu-desktop">
     <a href="https://one-together.vercel.app/home" class="big-button">
-      <img src="./assets/house.png" alt="Home" />
       <span>Home</span>
+      <img src="./assets/house.png" alt="Home" />
     </a>
     <a href="https://one-together.vercel.app/momentos" class="big-button">
-      <img src="./assets/graph.png" alt="Momentos" />
       <span>Momentos</span>
+      <img src="./assets/graph.png" alt="Momentos" />
     </a>
     <a href="https://one-together.vercel.app/whatsapp" class="big-button">
-      <img src="./assets/contact.png" alt="Whatsapp" />
       <span>Whatsapp</span>
+      <img src="./assets/contact.png" alt="Whatsapp" />
     </a>
     <a href="https://one-together.vercel.app/enigma9" class="big-button">
-      <img src="./assets/friends.png" alt="Presente" />
       <span>Presente</span>
+      <img src="./assets/friends.png" alt="Presente" />
     </a>
   </div>
 
@@ -402,7 +408,6 @@
     </a>
   </div>
 </nav>
-
       <div class="timeline bg-purple mt-5 d-flex">
          <!-- Botões kawaii -->
       <div class="btn-group-kawaii my-3 d-flex gap-3">
