--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       position: relative;
     }
 
+    .timeline-data{
+      font-weight: bold;
+    }
+
     .bg-purple{
       background-color: rgb(179, 183, 234, 0.95);
       box-shadow: 0 8px 10px rgba(0, 0, 0, 0.2);
